@@ -1139,6 +1139,7 @@ Frank Visser
 Johannes Vogel
 Martijn Vries
 Sjoerd de Vries
+Guido Vranken
 Niki W. Waibel
 Wojtek Walczak
 Charles Waldman
